Closed Bug 1308233 Opened 8 years ago Closed 8 years ago

Assertion failure: popupAnchor == 2, at /builds/moz2/working/layout/xul/nsMenuPopupFrame.cpp

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Fix assertion for rtl (obsolete) — Splinter Review
Steps: 1. Use a debug nightly RTL build (or set the RTL preference) 2. Open any dropdown in preference Get the assertion and the popup doesn't open. Regression from 52106.
Assignee: nobody → enndeakin
Attachment #8798461 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Comment on attachment 8798462 [details] [diff] [review] Fix assertion for rtl This fixes a assertion in rtl caused by the menulist opening with its selected item in position change.
Attachment #8798462 - Flags: review?(mstange)
Attachment #8798462 - Flags: review?(mstange) → review+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8798462 [details] [diff] [review] Fix assertion for rtl Approval Request Comment [Feature/regressing bug #]: 52106 [User impact if declined]: debug RTL users will assert/crash when a dropdown in chrome UI (preferences/bookmarks/etc) is opened [Describe test coverage new/current, TreeHerder]: manual testing, fixes assert line [Risks and why]: none [String/UUID change made/needed]: none
Attachment #8798462 - Flags: approval-mozilla-aurora?
Comment on attachment 8798462 [details] [diff] [review] Fix assertion for rtl Fix an assertion. Take it in 51 aurora.
Attachment #8798462 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: XP Toolkit/Widgets: Menus → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: