Bug 1308233, fix assertion opening menulists in rtl, r=mstange